--- a/FrontEndTwo/src/components/homePage/Home.css
+++ b/FrontEndTwo/src/components/homePage/Home.css
@@ -1,3 +1,4 @@
+
 .home {
     display: flex;
     flex-direction: column;
@@ -61,3 +62,13 @@
     margin-bottom: 0.5rem;
     color: #00ffcc;
 }
+
+.logo{
+    color: white;
+    display:flex;
+    font-weight: bolder;
+    p{
+        color: blue;
+    }
+}
+
